# X3GWriter

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  X3GWriter.py  __init__.py  cfg.ini  contributing.md  param.ini  plugin.json  plugin.json.in
cmake/: package.json.in
